--- a/ansible/roles/deploy_zabbix_agent/templates/zabbix_agent2.conf.j2
+++ b/ansible/roles/deploy_zabbix_agent/templates/zabbix_agent2.conf.j2
@@ -79,7 +79,7 @@ LogFileSize=0
 # Default:
 # Server=
 
-Server=192.168.241.59,192.168.56.1
+Server={{ zabbix_server_ipv4 }},{{ zabbix_agent_allow_address }}
 
 ### Option: ListenPort
 #	Agent will listen on this port for connections from the server.
@@ -132,7 +132,7 @@ Server=192.168.241.59,192.168.56.1
 # Default:
 # ServerActive=
 
-ServerActive=192.168.241.59
+ServerActive={{ zabbix_server_ipv4 }}
 
 ### Option: Hostname
 #	List of comma delimited unique, case sensitive hostnames.
@@ -143,7 +143,7 @@ ServerActive=192.168.241.59
 # Default:
 # Hostname=
 
-Hostname=vagrant-agent
+Hostname={{ local_username }}
 
 ### Option: HostnameItem
 #	Item used for generating Hostname if it is undefined. Ignored if Hostname is defined.
